--- a/index.html
+++ b/index.html
@@ -2,19 +2,28 @@
 <html>
   <!-- contains the meta data, author, title, favicon, links to style sheets and other important information -->
   <head>
+    <!-- meta data -->
     <meta charset="utf-8" />
     <meta name="description" content="Calculating marks" />
     <meta name="keywords" content="immaculata, ics2o" />
     <meta name="author" content="Niko" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png" />
     <link rel="manifest" href="./favicon/site.webmanifest" />
+    <!-- my style sheet -->
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- Google's MDL -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material">
+    <!-- Title for tab -->
     <title>Grade Calculator</title>
   </head>
   <body>
+    <!-- mdl script file -->
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <!-- references javascript file -->
     <script src="./js/script.js"></script>
     <h1>Grade Calculator</h1>
@@ -47,8 +56,10 @@
 
     </div>
     <!-- idea, make multiple small boxes where the user puts their marks, then when calculate, it adds them together and divides it by the number of boxes -->
-    
+    <!-- Slider with Starting Value -->
+    <input class="mdl-slider mdl-js-slider" type="range"
+      min="0" max="100" value="25" tabindex="0">
     <br>
-    <img src="./images/john.gif" alt="john man small face" height="300px" width="1200px"" >
+    <img src="./images/john.gif" alt="john man small face" height="300px" width="1200px">
   </body>
 </html>
