--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <!-- Google's MDL -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <!-- Title for tab -->
     <title>Grade Calculator</title>
   </head>
@@ -26,15 +26,15 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <!-- references javascript file -->
     <script src="./js/script.js"></script>
-    <h1>Grade Calculator</h1>
-    <h3 class="box">Please enter the following:</h3>
+    <h1 id="header">Grade Calculator</h1>
+    <h3 class="box" id="subhead">Please enter the following:</h3>
     <p>
       <!-- creates text field for users to input their marks and test total, and their percentage will be displayed once the button is clicked -->
       <form action="javascript: calculatePercentage()" class="box">
         <label for="testmarks">Enter Your Test Score and what it was out of:  </label>
-        <input type="number" step=".1" id="testmarks" placeholder="Test Mark" class="text-box">
+        <input type="number" step=".01" id="testmarks" placeholder="Test Mark" class="text-box">
         <label for="testtotal"><b>/</b></label>
-        <input type="number" step=".1" id="testtotal" placeholder="Test Total" class="text-box">
+        <input type="number"  step=".01" id="testtotal" placeholder="Test Total" class="text-box">
         <input type="submit" value="Calculate Percentage" id="percentbutton">
       </form>
     </p>
@@ -47,7 +47,7 @@
         <!-- creates text field for users to input multiple marks, and their average will be displayed when button clicked  -->
         <form action="javascript: calculateAverage()">
           <label for="testscores"">Enter Your Test Scores:  </label>
-          <input type="text" id="testscores" placeholder="Test Scores">
+          <input type="text" step=".01" id="testscores" placeholder="Test Scores">
           <input type="submit" value="Calculate Average" id="averagebutton">
         </form>
       </p>
